Fixes broken styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Droid+Sans:400,500);
 * {
   margin: 0;
@@ -6,24 +5,20 @@
   list-style: none;
   vertical-align: baseline;
 }
-
 h1 {
   color: #fff;
   text-align: center;
 }
-
 div {
   position: relative;
   z-index: 2;
 }
-
 body {
-  background-color: #06D7D9;
-  color: #06D7D9;
+  background-color: #06d7d9;
+  color: #57debf;
   font-family: 'Droid+Sans', sans-serif;
   font-weight: 400;
 }
-
 .footer {
   width: 450px;
   text-align: center;
@@ -37,10 +32,9 @@ body {
   text-decoration: none;
   color: #fff;
 }
-
 .quote-box {
   border-radius: 3px;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .5);
   position: relative;
   margin: 8% auto auto auto;
   width: 450px;
@@ -64,13 +58,13 @@ body {
 }
 .quote-box blockquote {
   background: #f9f9f9;
-  border-left: 10px solid #06D7D9;
+  border-left: 10px solid #06d7d9;
   margin: 1.5em 10px;
   padding: 2em 10px;
-  quotes: "“" "”" "‘" "’";
+  quotes: "\201C" "\201D" "\2018" "\2019";
 }
 .quote-box blockquote:before {
-  color: #08D7D9;
+  color: #06d7d9;
   font-size: 4em;
   content: open-quote;
   line-height: 0.1em;
@@ -91,12 +85,12 @@ body {
   margin: auto;
   display: block;
 }
-.quote-box {
+.quote-box .buttons .btn {
   height: 38px;
   border: none;
-  border-radius: 3px;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.6);
-  background-color: #06D7D9;
+  border-radius: 7px;
+  box-shadow: 0 5px #00a4a6;
+  background-color: #06d7d9;
   color: #fff;
   outline: none;
   font-size: 0.85em;
@@ -104,9 +98,16 @@ body {
   margin-top: 50px;
   opacity: 1;
   cursor: pointer;
+  position: relative;
+}
+.quote-box .buttons .btn:active {
+  box-shadow: 0 0 #00a4a6;
+  top: 5px;
 }
 .quote-box .buttons .btn:hover {
   opacity: 0.9;
+  box-shadow: 0 3px #00a4a6;
+  top: 1px;
 }
 .quote-box .buttons .btn#tweet-quote {
   float: left;
@@ -122,16 +123,6 @@ body {
   float: right;
   padding-top: 5px;
 }
-
 a:link {
   text-decoration: underline;
-}
-
-.buttons .btn {
-   transition: all 0.3s ease;
-   /*transform: translateY(4px);*/
-}
-
-.buttons:active .btn:active {
- box-shadow: 0px 3.5px rgba(0, 0, 0, 0.6);
 }
